[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
devnet = []

[dependencies]
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "6.0.0" }
solana-client = "2.1.6"
solana-zk-sdk = "2.1.6"
solana-sdk = "2.1.6"
solana-program = "2.1.6"
solana-account-decoder = "2.1.6"
solana-transaction-status = "2.1.6"
anyhow = "1.0.53"
serde_json = { version = "1.0.78" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
bs58 = { version = "0.5.1" }
bincode = { version = "1.3.3" }
clap = { version = "4.1.8", features = ["derive"] }
toml = "0.8.19"

[lib]
crate-type = ["cdylib", "lib"]
